<resources>
    <string name="app_name">ShooShoo</string>
    <string name="motive">The first global digital stadium </string>
    <string name="signin_tag">SIGN IN WITH \nYOUR ACCOUNT</string>
    <string name="signup_tag">SIGN UP WITH YOUR \nACCOUNT</string>
    <string name="username">User Name</string>
    <string name="emial_hint">E-mail</string>
    <string name="pws">Password</string>
    <string name="forget_pws">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_challengers">Challenges</string>
    <string name="private_text">Private</string>
    <string name="title_feed">Feed</string>
    <string name="title_winners">Winners</string>
    <string name="title_radar">Radar</string>
    <string name="sponsor_challengers">SPONSOR CHALLENGE</string>
    <string name="jackpot_challengers">JACKPOT CHALLENGE</string>
    <string name="view_all">View All</string>
    <string name="categories_title">CATEGORIES</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="s_challengers_result">Total Prizes  2.234.3215 - Biggest Jackpot</string>
    <string name="view_more_challenger">View More Challengers</string>
    <string name="quote1">Great! Now it\'s time to describe \n your Challenge</string>
    <string name="quote2">Think about a way, that most \n people can represent your brand</string>
    <string name="quote3">Don\'t forget that your Challenge is \n the arena!</string>
    <string name="quote4">Leave enough space for the creativity \n of all competitors</string>
    <string name="photo_entries"> Photo entries</string>
    <string name="no_of_photos">( no of Photos )</string>
    <string name="video_entries"> Video entries</string>
    <string name="upload_photo">Upload \n Banner Photo</string>
    <string name="upload_video">Upload \n Challenge Video</string>
    <string name="start">Let\'s Start</string>
    <string name="next">Next</string>
    <string name="more_companies">More Companies</string>
    <string name="private_sponsor">Private Sponsor</string>
    <string name="more_categories">More</string>
    <string name="more_prices">More Prizes</string>
    <string name="challenge_radar">Challenge Radar</string>
    <string name="categories">Categories</string>
    <string name="target_audience">Target Audience</string>
    <string name="sponsor_quote1">Welcome to Sponsor Challenge \n creator</string>
    <string name="jackpot_quote1">Welcome to Jackpot Challenge \n creator</string>
    <string name="sponsor_quote2">Sponsor Challengers are perfectly \n made  for companies to advertise \n their brands or their products!</string>
    <string name="jackpot_quote2">Jackpot Challengers are perfectly \n made  for big competition</string>
    <string name="sponsor_quote3">To begin with the walkthrough \n we will ask you about your companies \ninformation first</string>
    <string name="jackpot_quote3">To begin with the walkthrough \n we will ask you about your companies \ninformation first</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="audience_size_lable">Size of your Audience</string>
    <string name="audience_size_lable2">Possible participants</string>
    <string name="forget_pws_label">Please enter your registered Email Id \n and verification mail will be send</string>
    <string name="send">Send</string>
    <string name="define_your_budget">Define your budget</string>
    <string name="estimate_outreach">Estimate Outreach</string>
    <string name="summary">Summary</string>
    <string name="pay">Pay</string>
    <string name="publish">Submit</string>
    <string name="mini_game">Mini game</string>
    <string name="users">Search here!</string>
    <string name="audience_guide">It\'s time to define your requirements</string>
    <string name="audience_guide2">Tell us about the competitors and \nthe jackpot</string>
    <string name="audience_guide3">It\'s time to define your outreach</string>
    <string name="audience_guide4">Tell us about your costumers and the \n prices you give away </string>
    <string name="profile">Profile</string>
    <string name="our_brands">Our Brands</string>
    <string name="support_now">Support Now</string>
    <string name="current_balance">Current Balance</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="draw">Draw</string>
    <string name="submit">Submit</string>
    <string name="write_msg">Write message here</string>
    <string name="edit_profile">Profile Settings</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="winners_list">Winners List</string>
    <string name="winners_title"><![CDATA[H & M Hamburg Reopening]]></string>
    <string name="save">Save</string>
    <string name="trophies">Trophies</string>
    <string name="coins">Coins</string>
    <string name="winning_challenges">Winning Challenges</string>
    <string name="sponser_brands">Sponser Brands</string>
    <string name="friends">Friends</string>
    <string name="macth_req">Others can send me match requests</string>
    <string name="title_legal">Legal</string>
    <string name="title_Licenses">Licenses</string>
    <string name="title_user_agreement">User Agreement</string>
    <string name="title_tc">Terms of Use</string>
    <string name="title_chpws">Change Password</string>
    <string name="title_logout">Logout</string>
    <string name="change_pws">Change Password</string>
    <string name="old_pws">Old Password</string>
    <string name="new_pws">New Password</string>
    <string name="cnf_pws">Conform Password</string>
    <string name="change">Change</string>
    <string name="post_video">Submission</string>
    <string name="chlengetab">Create your own Challenge for millions of people</string>
    <string name="h_m"><![CDATA[H&M]]></string>
    <string name="notifications">Notifications</string>
    <string name="profile_line">Others can see that you visited their profiles</string>
    <string name="rewards_line">Reveals the prize amount next to you won \n challenges</string>
    <string name="friends_line">Others can see who your followers are</string>
    <string name="radar_line">Get Notifications for new challenges in your area</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="permission_rationale">Location permission is needed for core functionality </string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="all">All</string>
    <string name="mygifts">MyGifts</string>
    <string name="edit">EDIT</string>
    <string name="profile_visits">Profile visits</string>
    <string name="rewards">Rewards</string>
    <string name="show_me_on_radar">Show me on radar</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="age">Age</string>
    <string name="some_text"> <![CDATA[normal color <font color=\'#06a7eb\'>special color</font>]]>    </string>
    <string name="profile_preview">profile preview</string>
    <string name="search_filter">users filter</string>
    <string name="search_line">Choose the information other users can find you with in the users filter</string>
    <string name="profile_visibility">Visibility</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="personal">personal</string>
    <string name="follows">Follows</string>
    <string name="follows_line">Gey Nptifications when you have a new follower</string>
    <string name="likes">Likes</string>
    <string name="likes_line">Get Notifications when somebody likes your post</string>
    <string name="comments">Comments</string>
    <string name="comments_line">Get Notifications when somebody comments your post</string>
    <string name="messages">Messages</string>
    <string name="messages_line">Get notification when you have a new message</string>
    <string name="category">Category</string>
    <string name="category_line">Get Notifications for new Challenges of your favorite categories</string>
    <string name="follows_line2">Get notifications if people you follow create a new Challenge</string>
    <string name="invitation">Invitation</string>
    <string name="invitation_line">Others can invite me to Challenges</string>
    <string name="people_line">Get Notification for interesting people in your area</string>
    <string name="people">People</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="cfollower_line">Get Notification if people you follow create new challenge</string>
    <string name="book">Book</string>
    <string name="follow">Follow</string>
    <string name="brand">Brand</string>
    <string name="report">report</string>
    <string name="filter">Filter</string>
    <string name="type">Type</string>
    <string name="prize">Prize</string>
    <string name="entry">Entry</string>
    <string name="time">Time</string>
    <string name="language">Language</string>
    <string name="interaction">Interaction</string>
    <string name="outreach">Outreach</string>
    <string name="audandout"><![CDATA[Audience & Outreach]]></string>
    <string name="outreach_on_baget">Outreach based on budget</string>
    <string name="checkout">CHECKOUT</string>
    <string name="entry_fees">Entry Fees</string>
    <string name="access_limit">Limited access max</string>
    <string name="rewards_selection">Rewards selection</string>
    <string name="invite_fnds">Invite others</string>
    <string name="per_user">Per User</string>
    <string name="radar_switch_text">Find Challenges and users in  \n  your area</string>
    <string name="Regions">REGIONS</string>
    <string name="my_challenges">My Challenges</string>
    <string name="private_challenges">Private Sponsor</string>
    <string name="authorized_companies">AUTHORIZED COMPANIES</string>
    <string name="final_call_callenges">Final call</string>
    <string name="internet_msg">Please Check your internet connection</string>
    <string name="sponsor">Sponsor</string>
    <string name="jackpot">Jackpot</string>
    <string name="default_notification_channel_id">user follow</string>
    <string name="notifications_admin_channel_name">User followers</string>
    <string name="admission">Admission</string>
    <string name="dont_show">Don\'t show again</string>
    <string name="help_home">Welcome to the Home-Page! \n\nHere you can find your favorite Challenges.\nYou can use the pre Selection to search for Challenges or use the search filter in top left corner
    \n\nHave fun!</string>
    <string name="discover">Discover challenges</string>
    <string name="search_home_help_title">Look for what you need</string>
    <string name="search_help_text">With the search filter you can find search for every Challenge.User and Brand Simply type in the name.\n\n
        You can also use the detailed search
    </string>
    <string name="challenge_help_title">your dashboard</string>
    <string name="challenge_help_text">Follow your actions. See all challenges that you entered,created or saved\n\nNothing to see?
    \n\nGo ahead and design your own Challenge with the \nChallenge Creator.
    </string>
    <string name="winners_help_title">Keep track</string>
    <string name="winners_help_text">Keep track of your created jackpot Challenge\n\nDid you know that you can profit from jackpot Challenge
    \n\nDiscover the <font  fgcolor="#F7076F">ShooShoo Suite</font>.
    </string>
    <string name="feed_help_title">Tutorial</string>
</resources>