<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_icon"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_challengers"
        android:icon="@drawable/ic_challenger_icon"
        android:title="@string/title_challengers"
        />

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_feed_icon"
        android:title="@string/title_feed" />
    <item
        android:id="@+id/navigation_winners"
        android:icon="@drawable/ic_winner_icon"
        android:title="@string/title_winners" />
    <item
        android:id="@+id/navigation_radar"
        android:icon="@drawable/ic_radar_icon"
        android:title="@string/title_radar" />
</menu>