<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/gradiant_home"
    android:padding="10dp"
    tools:context=".fragment.ProfileVisibilityFragment">
    <LinearLayout
        android:id="@+id/top_lay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"

        >
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off"
            android:textAllCaps="true"
            android:layout_margin="5dp"
            android:textColor="@color/white_text"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on"
            android:layout_margin="5dp"
            android:textAllCaps="true"
            app:textAllCaps="true"
            android:textColor="@color/pink_lite"
            />

    </LinearLayout>
    <ScrollView
        android:layout_below="@+id/top_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        >
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal"
            android:fontFamily="@font/raleway_extrabold"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textAllCaps="true"
           android:layout_marginBottom="5dp"
            android:textColor="#85868A"
            />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch_follows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/SCBSwitch"
        android:checked="false"

        android:text="@string/follows"
        android:textColor="@color/white_text"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follows_line"
            android:textColor="@color/white_text"
            android:fontFamily="@font/raleway_medium"
            android:layout_marginRight="40dp"

            />




            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_likes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/SCBSwitch"
                android:checked="true"
                android:textColor="@color/white_text"
                android:text="@string/likes"
                android:layout_marginTop="10dp"
               
                />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/likes_line"
            android:textColor="@color/white_text"
            android:fontFamily="@font/raleway_medium"
            android:layout_marginRight="40dp"

            />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/SCBSwitch"
            android:checked="false"
            android:layout_marginTop="10dp"
           
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/comments"
            android:textColor="@color/white_text"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments_line"
            android:textColor="@color/white_text"
            android:fontFamily="@font/raleway_medium"
            android:layout_marginRight="40dp"

            />
        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_messages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/SCBSwitch"
            android:checked="true"
            android:layout_marginTop="10dp"
           
            android:text="@string/messages"
            android:textColor="@color/white_text"
            android:layout_centerVertical="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/messages_line"
            android:textColor="@color/white_text"
            android:fontFamily="@font/raleway_medium"
            android:layout_marginRight="40dp"

            />
    </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white_text"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_horizontal"
            />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                >
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_challengers"
                    android:fontFamily="@font/raleway_extrabold"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textAllCaps="true"
                    android:layout_marginBottom="5dp"
                    android:textColor="#85868A"
                    />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_cat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/SCBSwitch"
                    android:checked="false"

                    android:text="@string/category"
                    android:textColor="@color/white_text"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_line"
                    android:textColor="@color/white_text"
                    android:fontFamily="@font/raleway_medium"
                    android:layout_marginRight="40dp"

                    />
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_radar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/SCBSwitch"
                    android:checked="true"
                    android:textColor="@color/white_text"
                    android:text="@string/title_radar"
                    android:layout_marginTop="10dp"
                   
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radar_line"
                    android:textColor="@color/white_text"
                    android:fontFamily="@font/raleway_medium"
                    android:layout_marginRight="40dp"

                    />
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_cfollows"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/SCBSwitch"
                    android:checked="false"
                    android:text="@string/follows"
                    android:textColor="@color/white_text"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cfollower_line"
                    android:textColor="@color/white_text"
                    android:fontFamily="@font/raleway_medium"
                    android:layout_marginRight="40dp"

                    />
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_invitation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/SCBSwitch"
                    android:checked="false"
                    android:layout_marginTop="10dp"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/invitation"
                    android:textColor="@color/white_text"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invitation_line"
                    android:textColor="@color/white_text"
                    android:fontFamily="@font/raleway_medium"
                    android:layout_marginRight="40dp"

                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_text"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center_horizontal"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="30dp"
                >
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_radar"
                    android:fontFamily="@font/raleway_extrabold"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textAllCaps="true"
                   android:layout_marginBottom="5dp"
                    android:textColor="#85868A"
                    />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_people"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/SCBSwitch"
                    android:checked="false"

                    android:text="@string/people"
                    android:textColor="@color/white_text"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/people_line"
                    android:textColor="@color/white_text"
                    android:fontFamily="@font/raleway_medium"
                    android:layout_marginRight="40dp"

                    />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>