<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="end">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/content_viewallchallenges" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer"
        android:orientation="vertical"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:background="#000000"
        android:layout_gravity="end">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/pink_drak"
            android:fontFamily="@font/raleway_extrabold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:padding="15dp"
            android:text="@string/filter" />
        <TextView
            android:id="@+id/filter_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:padding="15dp"
            android:fontFamily="@font/raleway_medium"
            android:textColor="@color/white_text"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_gray"
            />
        <TextView
            android:id="@+id/filter_prize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prize"
            android:padding="15dp"
            android:fontFamily="@font/raleway_medium"
            android:textColor="@color/white_text"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_gray"
            />
        <TextView
            android:id="@+id/filter_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entry"
            android:padding="15dp"
            android:fontFamily="@font/raleway_medium"
            android:textColor="@color/white_text"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_gray"
            />
        <TextView
            android:id="@+id/filter_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:padding="15dp"
            android:fontFamily="@font/raleway_medium"
            android:textColor="@color/white_text"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_gray"
            />
        <TextView
            android:id="@+id/filter_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:padding="15dp"
            android:fontFamily="@font/raleway_medium"
            android:textColor="@color/white_text"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_gray"
            />
        <TextView
            android:id="@+id/filter_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:padding="15dp"
            android:fontFamily="@font/raleway_medium"
            android:textColor="@color/white_text"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_gray"
            />
        <TextView
            android:id="@+id/filter_interaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interaction"
            android:padding="15dp"
            android:fontFamily="@font/raleway_medium"
            android:textColor="@color/white_text"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_gray"
            />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>