<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradiant_home"
    tools:context=".activity.ForgetPasswordActivity">
    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_gravity="left|center_vertical"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/ic_back_left_black_24dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:fontFamily="@font/futura_medium_bt"
        android:textColor="@android:color/white"
        android:text="FORGET \nPASSWORD "

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/color_gray"
        android:text="@string/forget_pws_label"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:lineSpacingMultiplier="1.5"
        />
    <LinearLayout
        android:id="@+id/user_mail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        >
        <ImageView
            android:id="@+id/iv_email_icon"
            android:layout_width="@dimen/edit_icon"
            android:layout_height="@dimen/edit_icon"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="8dp"
            app:srcCompat="@drawable/email_normal"
            />
        <EditText
            android:id="@+id/edt_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="left|center_vertical"
            android:hint="@string/emial_hint"

            android:textColor="#FFFFFF"
            android:textColorHint="@color/gray_text"
            android:background="#00FFFFFF"
            android:inputType="text"
            android:layout_margin="2dp"
            android:padding="2dp"
            />



    </LinearLayout>
    <View
        android:id="@+id/user_mail_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="33dp"
        android:background="@color/gray_text"/>

    <Button
        android:id="@+id/btn_forget_pws"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/submit_btn_shape"
        android:text="@string/send"
        android:textSize="18sp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:fontFamily="@font/futura_medium_bt"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="#FFF"

        />
</LinearLayout>